[gd_scene load_steps=2 format=3 uid="uid://pcy30ji4ipqo"]

[ext_resource type="Script" uid="uid://2sx4os05550k" path="res://scripts/game_over_screen.gd" id="1_xeevv"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xeevv")

[node name="NewHighScore" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 753.0
offset_top = 8.00003
offset_right = 907.0
offset_bottom = 31.0
rotation = 0.690335
scale = Vector2(1.88473, 2.1914)
text = "NEW HIGH SCORE!!!!"

[node name="HighScoreContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 147.0
offset_top = 106.0
offset_right = 280.0
offset_bottom = 146.0

[node name="Label2" type="Label" parent="HighScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "High Score"

[node name="HighScore" type="Label" parent="HighScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "00000"

[node name="ScoreContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 388.0
offset_top = 100.0
offset_right = 463.0
offset_bottom = 140.0
scale = Vector2(4.78703, 3.99151)

[node name="Label3" type="Label" parent="ScoreContainer"]
layout_mode = 2
text = "Score"

[node name="Score" type="Label" parent="ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "000"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -510.5
offset_top = -55.5
offset_right = 510.5
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 81
text = "Crunch Harder Next Time!"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ToMainMenu" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "To Main Menu"
